--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-Django~=3.1.7
+Django~=3.1.8
+redis~=3.5.3
+django-redis~=4.12.1
+django-debug-toolbar~=3.2.1
 django-taggit~=1.3.0
-Pillow~=8.2.0
 social-auth-app-django~=4.0.0
+django-autocomplete-light~=3.8.1
+Pillow~=8.2.0
 ImageHash~=4.2.0
 extcolors~=1.0.0
-django-autocomplete-light~=3.8.1
 Unidecode~=1.2.0
